name:                easy-http
version:             0.1.6
synopsis:            <Project description>
description:         <Project description>
category:            Network
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          james.sanders@thisismedium.com
cabal-version:       >= 1.6
build-type:          Simple

Library
  hs-source-dirs: src

  exposed-modules:
        Network.EasyHttp.Server

  other-modules:
        Network.EasyHttp.Types,
        Network.EasyHttp.RFC2616
         
  build-depends: 
                 base,
                 network-bytestring >= 0.1.2.1,
                 network >= 2.2.1.7,
                 containers >= 0.3.0.0,
                 bytestring >= 0.9.1.5,
                 MissingH >= 1.1.0.1,
                 unix >= 2.4.0.0,
                 filepath >= 1.1.0.3,
                 directory >= 1.0.1.0,
                 sendfile >= 0.6.1,
                 mtl >= 1.1.0.2,
                 time >= 1.1.4,
                 regex-posix >= 0.94.1,
                 attoparsec >= 0.8.0.2,
                 old-locale >= 1.0.0.2