name:                easy-http
version:             0.1.8
synopsis:            <Project description>
description:         <Project description>
category:            Network
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          james.sanders@thisismedium.com
cabal-version:       >= 1.6
build-type:          Simple

Library
  ghc-options: -O2 -threaded -fvia-C 
  hs-source-dirs: src

  exposed-modules:
        Network.EasyHttp.Server

  other-modules:
        Network.EasyHttp.Types,
        Network.EasyHttp.RFC2616
         
  build-depends: 
                 base >= 4,
                 network >= 2.2.3.1,
                 containers >= 0.3.0.0,
                 bytestring >= 0.9.1.5,
                 MissingH >= 1.1.0.1,
                 unix >= 2.4.0.0,
                 filepath,
                 directory >= 1.0.1.0,
                 sendfile >= 0.6.1,
                 mtl >= 1.1.0.2,
                 time >= 1.1.4,
                 regex-posix >= 0.94.1,
                 attoparsec >= 0.8.2.0,
                 old-locale >= 1.0.0.2